--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Login</title>
     <style>
         body{
             background-color: #EEEEEE;
@@ -20,23 +21,25 @@
         .heading{
             padding: 60px;
         }
-        .buttons{
-            width: 300px;
-            margin: 0 auto;
-            display: inline;
-        }
     </style>
-    <title>Login</title>
 </head>
 <body>
     <div class="heading">
-        <h1>Welcome CodeFiesta's CrackIT Team!!</h1>
+        <h1>Login</h1>
     </div>
-    
-    <div class="buttons">
-        <a class="btn btn-outline-dark btn-lg" href="/secret/register" role="button">Register</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/login" role="button">Login</a>
-    </div>
+
+    <!-- Makes POST request to /register route -->
+    <form action="/login" method="POST">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" name="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password">
+        </div>
+        <button type="submit" class="btn btn-dark">Login</button>
+    </form>
 
 </body>
 </html>
