Connected to mongoDB and added authentiacation for login

--- a/views/crackIt.ejs
+++ b/views/crackIt.ejs
@@ -26,7 +26,7 @@
             display: inline;
         }
     </style>
-    <title>Welcome</title>
+    <title>CrackIt</title>
 </head>
 <body>
     <div class="heading">
@@ -34,8 +34,9 @@
     </div>
     
     <div class="buttons">
-        <a class="btn btn-outline-dark btn-lg" href="/secret/register" role="button">Register</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/login" role="button">Login</a>
+        <a class="btn btn-outline-dark btn-lg" href="/" role="button">Create Quiz</a>
+        <a class="btn btn-outline-dark btn-lg" href="/" role="button">View Responses</a>
+        <a class="btn btn-outline-dark btn-lg" href="/" role="button">Send Mails</a>
     </div>
 
 </body>
