Added web pages for server

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Register</title>
     <style>
         body{
             background-color: #EEEEEE;
@@ -20,24 +21,15 @@
         .heading{
             padding: 60px;
         }
-        .buttons{
-            width: 300px;
-            margin: 0 auto;
-            display: inline;
-        }
     </style>
-    <title>CrackIt</title>
 </head>
 <body>
     <div class="heading">
-        <h1>Welcome CodeFiesta's CrackIT Team!!</h1>
-    </div>
-    
-    <div class="buttons">
-        <a class="btn btn-outline-dark btn-lg" href="/secret/questions" role="button">Create Quiz</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/responses" role="button">View Responses</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/mails" role="button">Send Mails</a>
+        <h1>Add Quiz Questions</h1>
     </div>
 
+    <p>Add 2 options 1 for round 1 quiz which will consistes a schema of 6 objects - 1 for question, 4 for options and 1 for correct response.</p>
+    <p>For round 2 quiz which will consists a schema of 2 objects - 1 for question 1 for text responses</p>
+    
 </body>
 </html>
