Updated file Structure

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -25,6 +25,10 @@
             margin: 0 auto;
             display: inline;
         }
+        .form{
+            text-align: center;
+            color: #4D455D;
+        }
     </style>
     <title>Welcome</title>
 </head>
@@ -33,10 +37,11 @@
         <h1>Welcome CodeFiesta's CrackIT Team!!</h1>
     </div>
     
-    <div class="buttons">
-        <a class="btn btn-outline-dark btn-lg" href="/secret/register" role="button">Register</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/login" role="button">Login</a>
-    </div>
+    <form action="/secret" method="post" class="form">
+        <label for="code">Enter the Access Code Here</label>
+        <input type="password" name="code" required>
+        <button type="submit" class="btn btn-outline-dark">Verify</button>
+    </form>
 
 </body>
 </html>
