--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,7 +1,104 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CodeFiesta Quiz</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <img
+                src="crackIt_logo.png"
+                height="90"
+                alt="Logo"
+                loading="lazy"
+                width="100"/>
+                <a href="#" class="navbar-brand">CrackIt</a>
+                <div class="time_line"></div>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav ms-auto">
+                        <a href="/logout" class="nav-item nav-link">Logout</a>
+                    </div>
+                        <img
+                        src="codefiesta.PNG"
+                        height="70"
+                        alt="Logo"
+                        loading="lazy"
+                        width="80"
+                        />
+                        
+                </div>
+            </div>
+        </nav>
+    
+        <div class="start_btn">
+            <button>Start Quiz</button>
+        </div>
+        <div class="info_box">
+            <div class="info-title">
+                <span>Some Rules of this Quiz</span>
+            </div>
+            <div class="info-list">
+                <div class="info">1. You will have only <span>20 seconds</span> per each question.</div>
+                <div class="info">2. Once you select your answer, it can't be undone.</div>
+                <div class="info">3. You can't select any option once time goes off.</div>
+                <div class="info">4. You can't exit from the Quiz while you're playing.</div>
+                <div class="info">5. You'll get points on the basis of your correct answers.</div>
+            </div>
+            <div class="buttons">
+                <button class="quit" style="background-color: #7252b7 !important;">Exit Quiz</button>
+                <button class="restart" style="background-color: #7252b7 !important;">Continue</button>
+            </div>
+        </div>
+        <div class="quiz_box">
+            <header>
+                <div class="title">CodeFiesta-CrackIt</div>
+                <div class="timer">
+                    <div class="time_left_txt">Time Left</div>
+                    <div class="timer_sec">20</div>
+                </div>
+                <div class="time_line"></div>
+            </header>
+            <section>
+                <div class="que_text">
+            
+                </div>
+                <div class="option_list">
+            
+                </div>
+            </section>
 
-    <h1>Quiz Questions</h1>
+        
+            <footer>
+                <div class="total_que">
+                
+                </div>
+                <button class="next_btn">Next Que</button>
+            </footer>
+        </div>
 
-    <p>Will contain all the questions for the rounds</p>
+        <!-- Result Box -->
+        <div class="result_box">
+            <div class="icon">
+                <img src="crackIt_logo.png"></img>
+            </div>
+            <div class="complete_text">You've completed the Quiz!</div>
+            <div class="score_text">
+            
+            </div>
+            <div class="buttons">
+                <button class="restart">Replay Quiz</button>
+                <button class="quit">Quit Quiz</button>
+            </div>
+        </div>
 
-<%- include('partials/footer') %>
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    </body>
+</html>
