--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Template Main CSS File -->
-  <link href="css/style_new.css" rel="stylesheet">
+  <link href="assets/style_new.css" rel="stylesheet">
   
 </head>
 
