--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,23 +11,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/ideas.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/ideas.png" rel="icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="vendor/aos/aos.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Template Main CSS File -->
-  <link href="assets/style_new.css" rel="stylesheet">
+  <link href="css/style_new.css" rel="stylesheet">
   
 </head>
 
@@ -81,7 +81,7 @@
 
         <div class="row justify-content-between">
           <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
-            <img src="assets/img/trophy.png" class="img-fluid" alt="" data-aos="zoom-in">
+            <img src="img/trophy.png" class="img-fluid" alt="" data-aos="zoom-in">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">CODE FIESTA</h3>
@@ -106,14 +106,14 @@
 
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-1.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-2.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-3.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-4.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-5.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-6.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-7.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/clients/client-8.png" class="img-fluid" alt=""></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -171,7 +171,6 @@
             </div>
             
           </div>
-       
           <div class="button">
             <input type="submit" value="Login">
           </div>
@@ -252,15 +251,15 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/crackIt/assets/vendor/aos/aos.js"></script>
-  <script src="/crackIt/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/crackIt/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/crackIt/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/crackIt/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/crackIt/assets/vendor/php-email-form/validate.js"></script>
+  <script src="vendor/aos/aos.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/crackIt/assets/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
