--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,8 +35,13 @@
   </nav>
   <div class="jumbotron centered">
     <div class="container">
-      <h1 class="display-3">Crack It</h1>
-      <p class="lead">Don't keep your secrets, share them anonymously!</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h3 class="animate-charcter">CrackIt</h3>
+          </div>
+        </div>
+      </div>
       <hr>
       <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
       <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
