--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container mt-5">
+    <div class="container mt-5" style="align-items: center;">
         <h1>Register</h1>
 
         <div class="row">
