Connected ui to backend

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,53 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+    <head>
+    <meta charset="utf-8">
+    <title>Code Fiesta Crackit</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style1.css">
+    </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Secrets</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-        <img
-        src="img/crackIt_logo.png"
-        height="90"
-        alt="Logo"
-        loading="lazy"
-        width="100"/>
-        <a href="#" class="navbar-brand">CrackIt</a>
-        <div class="time_line"></div>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-        <img
-        src="img/codefiesta.PNG"
-        height="70"
-        alt="Logo"
-        loading="lazy"
-        width="80"
-      />
-        
-      </div>
-    </div>
-  </nav>
-  <div class="jumbotron centered">
-    <div class="container">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h3 class="animate-charcter">CrackIt</h3>
-          </div>
+    <body style="background-image: url('img/crackit_bg.jpg'); ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <div class="container-fluid">
+                <img src="img/clg.png" height="90" alt="Logo" loading="lazy" width="100"/>
+                <label for="cf" style="color: white; font-size: larger;">CodeFiesta</label>
+                <img src="img/cf_logo.jpeg" height="70" alt="Logo" loading="lazy" width="80"/>
+            </div>
+        </nav>
+        <div class="clg-logo text-center" style="margin-top: 30px;">
+            <!-- <img src="PES_MCOE_logo.png" height="300" alt="Logo" loading="lazy" width="300"/> -->
         </div>
-      </div>
-      <hr>
-      <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-      <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-
-    </div>
-  </div>
-
-</body>
+        <div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <label class="animate-charcter">CrackIt</label>
+                    </div>
+                </div>
+            </div>
+        <div>
+            <!-- <img src="crackIt_logo.png" height="190" alt="Logo" loading="lazy" width="200"/> -->
+            <div class="container1" style="align-items: left;">
+                <img class="avatar" src="img/c_logo.jpeg" alt="Skytsunami" />
+                <p>Take a break from .c, .ipynb and test your skills in .gk! is a non-technical quiz event centered around general knowledge.To win thrilling prizes, teams must pass two rounds. The initial round comprises 20 multiple-choice questions, while the second requires team members to write answer without having a cushion of "CADB". And if more than three teams dare to clear the second they'll have to be ready for final show down before they are crowned King of the Hill</p>
+            </div>
+        </div> 
+        <hr>
+        <div class="button">
+    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
+    <a class="btn btn-light btn-lg" href="/login" role="button">Login</a>
+</div>
+        <div class="sponsors">
+            <label>Sponsors</label>
+        </div> 
+        <div class="sponsor-images">
+            <span class="img1">
+                <img src="img/Josh.png" alt="Josh-logo">
+            </span>
+            <span class="img2">
+                <img src="img/Linkcode.png" alt="linkcode-logo">
+            </span>
+            <span class="img3">
+                <img src="img/techR.jpg" alt="techr-logo">
+            </span>
+            <span class="img4">
+                <img src="img/creamy.png" alt="creamy-logo">
+            </span>
+        </div>
+        <div class="team-members">
+            <label>Team Members</label>
+        </div> 
+        <div class="team-member-images"></div>     
+    </body>
 </html>
