--- a/views/sendMail.ejs
+++ b/views/sendMail.ejs
@@ -9,21 +9,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Welcome CodeFiesta - CrackIT Team</h1>
+        <h1>Sent mails successfully!</h1>
     </div>
-    <div class="card">
-        <div class="card-body" style="text-align: center;">
-            <a class="btn btn-dark btn-lg" href="/secret/questions" role="button">Create Quiz</a>
-            <a class="btn btn-dark btn-lg" href="/secret/responses" role="button">View Responses</a>
-            <a class="btn btn-dark btn-lg" href="/secret/mails" role="button">Send Mails</a>
-        </div>
-    </div>
-</body>
-</html>
-    
-    <div class="buttons">
-        
-    </div>
-
 </body>
 </html>
