--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -9,8 +9,8 @@
 .text{
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
     border-radius: 10px;
 
 }
@@ -19,7 +19,7 @@
 }
 .btn{
     background-color: white !important;
-    color: #b9a1e9 !important;
+    color: black !important;
     border-radius: 5px;
     margin: auto;
     text-align: center;
