--- a/views/mails.ejs
+++ b/views/mails.ejs
@@ -3,29 +3,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Register</title>
-    <style>
-        body{
-            background-color: #EEEEEE;
-        }
-        h1{
-            color: #4D455D; 
-            font-family: 'Poppins', sans-serif;
-            font-size: 50px;
-            text-align: center;
-        }
-        .heading{
-            padding: 60px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="heading">
+    <div class="container mt-5">
         <h1>Sending Mails to the Users</h1>
+        <div class="card">
+            <div class="card-body" style="text-align: center;">
+                <form action="/secret/mails" method="POST">
+                    <label for="mail">Enter the email addresses of selected teams: </label>
+                    <br>
+                    <input type="email" name="mail" placeholder="Enter Mail">
+                    <br>
+                    <br>
+                    <button type="submit" class="btn btn-dark">Add</button>
+                </form>
+                <form action="/secret/sendMail" method="POST">
+                    <button type="submit" class="btn btn-dark">Send Mail</button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 </html>
