--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -3,43 +3,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Register</title>
-    <style>
-        body{
-            background-color: #EEEEEE;
-        }
-        h1{
-            color: #4D455D; 
-            font-family: 'Poppins', sans-serif;
-            font-size: 50px;
-            text-align: center;
-        }
-        .heading{
-            padding: 60px;
-        }
-        .form{
-            text-align: center;
-            color: #4D455D;
-        }
-    </style>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="heading">
+    <div class="container mt-5">
         <h1>Add Quiz Questions</h1>
     </div>
-
-    <div class="form">
-        <form action="/questions" method="post">
-            <label for="quesNum">Enter the number of questions: </label>
-            <input type="number" name="quesNum" required>
-        </form>
-        <br>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/question-round-one" role="button">Round One</a>
-        <a class="btn btn-outline-dark btn-lg" href="/secret/question-round-two" role="button">Round Two</a>
+    <div class="card">
+        <div class="card-body" style="text-align: center;">
+            <div class="form">
+                <form action="/questions" method="post">
+                    <label for="quesNum">Enter the number of questions: </label>
+                    <input type="number" name="quesNum" required>
+                </form>
+                <br>
+                <a class="btn btn-dark btn-lg" href="/secret/question-round-one" role="button">Round One</a>
+                <a class="btn btn-dark btn-lg" href="/secret/question-round-two" role="button">Round Two</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
