--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,37 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Secrets</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="background-image: url('img/crackit_bg.jpg');">
 
-    <div class="container mt-5" style="align-items: center;">
-        <h1>Register</h1>
+    <div class="container mt-5">
+        <h1 style="color:white">Register</h1>
 
         <div class="row">
             <div class="col-sm-8">
-                <div class="card">
-                    <div class="card-body">
 
                         <!-- Makes POST request to /register route -->
                         <form action="/register" method="POST">
                             <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" name="username">
+                                <label for="email" style="color: white;">Email</label>
+                                <input type="email" class="form-control" name="username">
                             </div>
                             <div class="form-group">
-                            <label for="password">Password</label>
+                            <label for="password" style="color: white;">Password</label>
                             <input type="password" class="form-control" name="password">
                             </div>
-                            <button type="submit" class="btn btn-dark">Register</button>
+                            <button type="submit" class="btn btn-light">Register</button>
                         </form>
-
-                    </div>
-                </div>
             </div>
         </div>
     </div>
