--- a/views/responses.ejs
+++ b/views/responses.ejs
@@ -3,35 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Register</title>
-    <style>
-        body{
-            background-color: #EEEEEE;
-        }
-        h1{
-            color: #4D455D; 
-            font-family: 'Poppins', sans-serif;
-            font-size: 50px;
-            text-align: center;
-        }
-        .heading{
-            padding: 60px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="heading">
-        <h1>See mail responses</h1>
+    <div class="container mt-5">
+        <h1>Quiz Responses</h1>
     </div>
-
-    <p>put two options for seeing round 1 and round 2 responses</p>
-    <p>Here schema of the user which is created for recording of the responses of the user shpuld be displayed here</p>
-    <p>Here create a schema for user which consists of their name, email, and their responses for round 1</p>
-    <p>also the responses for round 2 should be displayed here</p>
-
 </body>
 </html>
