--- a/views/roundOne.ejs
+++ b/views/roundOne.ejs
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CodeFiesta Quiz</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/style1.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+    <body style="background-image: url('img/crackit_bg.jpg');">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <img
                 src="img/crackIt_logo.png"
                 height="90"
                 alt="Logo"
                 loading="lazy"
-                width="100"/>
-                <a href="#" class="navbar-brand">CrackIt</a>
-                <div class="time_line"></div>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="/logout" class="nav-item nav-link">Logout</a>
-                    </div>
-                        <img
-                        src="img/codefiesta.PNG"
-                        height="70"
-                        alt="Logo"
-                        loading="lazy"
-                        width="80"
-                        />
-                        
+                width="100"
+              />
+              <label class="navbar-brand">CrackIt</label>
+            <div class="time_line"></div>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto">
+                    <a href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
+                <img
+                src="img/cf_logo.jpeg"
+                height="70"
+                alt="Logo"
+                loading="lazy"
+                width="80"
+              />
+                
+              </div>
             </div>
-        </nav>
+          </nav>
     
         <div class="start_btn">
             <button>Start Quiz</button>
@@ -53,8 +51,8 @@
                 <div class="info">5. You'll get points on the basis of your correct answers.</div>
             </div>
             <div class="buttons">
-                <button class="quit" style="background-color: #7252b7 !important;">Exit Quiz</button>
-                <button class="restart" style="background-color: #7252b7 !important;">Continue</button>
+                <button class="quit" style="background-color: black !important;">Exit Quiz</button>
+                <button class="restart" style="background-color: black !important;">Continue</button>
             </div>
         </div>
         <div class="quiz_box">
@@ -94,11 +92,13 @@
             
             </div>
             <div class="buttons">
-                <button class="restart">Replay Quiz</button>
-                <button class="quit">Quit Quiz</button>
+                <!-- <button class="restart">Replay Quiz</button> -->
+                <button class="quit">Exit</button>
             </div>
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="js/script.js"></script>
     </body>
