--- a/views/roundOne.ejs
+++ b/views/roundOne.ejs
@@ -16,12 +16,11 @@
                 height="90"
                 alt="Logo"
                 loading="lazy"
-                width="100"
-              />
-              <label class="navbar-brand">CrackIt</label>
-            <div class="time_line"></div>
-              <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto">
+                width="100"/>
+                <label class="navbar-brand">CrackIt</label>
+                <div class="time_line"></div>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav ms-auto">
                     <a href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
                 <img
@@ -29,12 +28,10 @@
                 height="70"
                 alt="Logo"
                 loading="lazy"
-                width="80"
-              />
-                
-              </div>
+                width="80"/>
             </div>
-          </nav>
+            </div>
+        </nav>
     
         <div class="start_btn">
             <button>Start Quiz</button>
