--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -34,21 +34,6 @@
               </div>
             </div>
           </nav>
-          <div class="mb-3">
-            <form action="/roundTwo" method="POST">
-                <label for="exampleFormControlTextarea1" class="form-label">7 sisters in India :</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="answer"></textarea>
-                <br>
-                <br>
-                <button class="btn btn-light" type="submit">Next</button>
-            </form>
-            <br>
-            <form action="/thanks" method="POST">
-              <button class="btn btn-light" type="submit">Submit</button>
-            </form>
-          </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-    <script src="js/question.js"></script>
-</body>
+            <h1 style="color: white; margin-top: 150px;">Thankyou for your response. The results will be declared shortly.</h1>
+    </body>
 </html>
