--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
     <meta charset="utf-8">
-    <title>Code Fiesta Crackit</title>
+    <title>Secrets</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style1.css">
@@ -27,38 +27,130 @@
                     </div>
                 </div>
             </div>
+           
         <div>
             <!-- <img src="crackIt_logo.png" height="190" alt="Logo" loading="lazy" width="200"/> -->
-            <div class="container1" style="align-items: left;">
+        
+             <div class="container1" style="align-items: center;">
                 <img class="avatar" src="img/c_logo.jpeg" alt="Skytsunami" />
                 <p>Take a break from .c, .ipynb and test your skills in .gk! is a non-technical quiz event centered around general knowledge.To win thrilling prizes, teams must pass two rounds. The initial round comprises 20 multiple-choice questions, while the second requires team members to write answer without having a cushion of "CADB". And if more than three teams dare to clear the second they'll have to be ready for final show down before they are crowned King of the Hill</p>
-            </div>
+             </div>
         </div> 
         <hr>
         <div class="button">
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-light btn-lg" href="/login" role="button">Login</a>
+    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
 </div>
+<br>
+<br>
         <div class="sponsors">
             <label>Sponsors</label>
         </div> 
-        <div class="sponsor-images">
-            <span class="img1">
-                <img src="img/Josh.png" alt="Josh-logo">
-            </span>
-            <span class="img2">
-                <img src="img/Linkcode.png" alt="linkcode-logo">
-            </span>
-            <span class="img3">
-                <img src="img/techR.jpg" alt="techr-logo">
-            </span>
-            <span class="img4">
-                <img src="img/creamy.png" alt="creamy-logo">
-            </span>
-        </div>
+
+        <div class="row" style="margin-left:100px; margin-top: 50px;">
+            <div class="column">
+              <img src="img/Josh.png" style="width:80%">
+            </div>
+            <div class="column">
+              <img src="img/Linkcode.jpg" style="width:80%">
+            </div>
+            <div class="column">
+              <img src="img/cascode.png" style="width:70%">
+            </div>
+            <div class="column">
+                <img src="img/techR.jpg" style="width:70%">
+            </div>
+            <div class="column">
+                <img src="img/creamy.png" style="width:80%">
+            </div>
+          </div>
+
+        <br><br><br><br>  
+
         <div class="team-members">
-            <label>Team Members</label>
+            <label style="font-size: 3vmax;">Team Members</label>
         </div> 
-        <div class="team-member-images"></div>     
+
+        <!-- <div class="cards">
+            <div class="image">
+                <img src="person.jpg">
+            </div>
+            <div class="title">Vaibhavi Hule</div>
+            <div class="desc"></div>
+        </div>
+        <div class="cards">
+            <div class="image">
+                <img src="person.jpg">
+            </div>
+            <div class="title">Ayesha Mulani</div>
+            <div class="desc"></div>
+        </div>
+        <div class="cards">
+            <div class="image">
+                <img src="person.jpg">
+            </div>
+            <div class="title">Trupti Surwade</div>
+            <div class="desc"></div>
+        </div>
+        <div class="cards">
+            <div class="image">
+                <img src="person.jpg">
+            </div>
+            <div class="title">Shrushti Kakade</div>
+            <div class="desc"></div>
+        </div>     
+ -->
+<br><br><br><br><br><br><br><br>
+        <footer id="footer">
+
+            <div class="footer-top">
+              <div class="container">
+                <div class="row">
+        
+                  <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>CODE FIESTA</h3>
+                    <p>
+                      PES Modern College OF Engineering,<br>
+                      JM road, Shivaji Nagar,<br>
+                      Pune, Maharashtra <br><br>
+                      <strong>Phone:</strong> +1 5589 55488 55<br>
+                      <strong>Email:</strong> info@example.com<br>
+                    </p>
+                  </div>
+        
+                  <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Useful Links</h4>
+                    <ul>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#services">Events</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#contact">Registration</a></li>
+                    </ul>
+                  </div>
+        
+                  <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Our Social Networks</h4>
+                    <p>Get Connected with Us on our Social Media Networks</p>
+                    <div class="social-links mt-3">
+                      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                      <a href="https://www.instagram.com/mpulse_codefiesta/?igshid=YmMyMTA2M2Y%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+                      <a href="https://discord.com/invite/WgxeuCtB" class="discord"><i class="bx bxl-discord"></i></a>
+                      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                    </div>
+                  </div>
+        
+                </div>
+              </div>
+            </div>
+        
+            <div class="container py-4">
+              <div class="copyright">
+                &copy; Copyright <strong><span>CODEFIESTA</span></strong>. All Rights Reserved
+              </div>
+              
+            </div>
+          </footer><!-- End Footer -->
+          <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>        
     </body>
 </html>
