Solved Routing Issues

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,41 +65,58 @@
             </div>
           </div>
 
-        <br><br><br><br>  
+        <br><br><br><br> 
 
         <div class="team-members">
-            <label style="font-size: 3vmax;">Team Members</label>
-        </div> 
-
-        <!-- <div class="cards">
-            <div class="image">
-                <img src="person.jpg">
+          <label style="font-size: 3vmax;">Team Members</label>
+      </div> 
+      <div class="main">
+        <div class="profile-card">
+            <div class="img">
+                <img src="img/HP.jpg">
             </div>
-            <div class="title">Vaibhavi Hule</div>
-            <div class="desc"></div>
+            <div class="caption">
+                <h3>HARSH PRASADE</h3>
+                <p>Mentor</p>
+            </div>
         </div>
-        <div class="cards">
-            <div class="image">
-                <img src="person.jpg">
+        <div class="profile-card">
+            <div class="img">
+                <img src="img/VH.jpeg">
             </div>
-            <div class="title">Ayesha Mulani</div>
-            <div class="desc"></div>
+            <div class="caption">
+                <h3>VAIBHAVI HULE</h3>
+                <p>Lead & Backend Developer</p> 
+            </div>
         </div>
-        <div class="cards">
-            <div class="image">
-                <img src="person.jpg">
+        <div class="profile-card">
+            <div class="img">
+                <img src="img/AM.jpg">
             </div>
-            <div class="title">Trupti Surwade</div>
-            <div class="desc"></div>
+            <div class="caption">
+                <h3>AYESHA MULANI</h3>
+                <p>Backend Developer</p>
+            </div>
         </div>
-        <div class="cards">
-            <div class="image">
-                <img src="person.jpg">
-            </div>
-            <div class="title">Shrushti Kakade</div>
-            <div class="desc"></div>
-        </div>     
- -->
+        <div class="profile-card">
+          <div class="img">
+              <img src="img/TS.jpeg">
+          </div>
+          <div class="caption">
+              <h3>TRUPTI SURWADE</h3>
+              <p>Frontend Developer</p>
+          </div>
+      </div>
+      <div class="profile-card">
+        <div class="img">
+            <img src="img/SK.jpeg">
+        </div>
+        <div class="caption">
+            <h3>SRUSHTI KAKADE</h3>
+            <p>Frontend Developer</p>
+        </div>
+    </div>
+    </div>
 <br><br><br><br><br><br><br><br>
         <footer id="footer">
 
