--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+@font-face {
+  font-family: Exo;
+  src: url(./fonts/Exo2.0-Medium.otf);
+}
 .navbar{
     color: white !important;
 }
@@ -307,41 +311,74 @@ p{
     padding: 3px 0;
   }
 }
-  
-/* .team-member-images {
-  float:inline-start;
-  width: 20%;
-  /* padding: px;
- } */
-
-/* Clear floats after image containers */
-/* .card::after {
-  content: "";
-  clear: both;
-  display:table-row;
-} */ 
-
-.card{
-  width: 20%;
-  background-color: white;
-  border-radius: 5px;
-  margin: 40px;
-  border: 1px;
+.main{
+  margin-top: 100px;
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.image img{
-  /* width:100%; */
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-
+.profile-card{
+  position: relative;
+  font-family: sans-serif;
+  width: 220px;
+  height: 220px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 50%;
+  box-shadow: 0 0 22px #3336;
+  transition: .6s;
+  margin: 0 25px;
 }
-
-.title{
+.profile-card:hover{
+  border-radius: 10px;
+  height: 260px;
+}
+.profile-card .img{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: .6s;
+  z-index: 99;
+}
+.profile-card:hover .img{
+  transform: translateY(-60px);
+}
+.img img{
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0 0 22px #3336;
+  transition: .6s;
+}
+.profile-card:hover img{
+  border-radius: 10px;
+}
+.caption{
   text-align: center;
-
+  transform: translateY(-80px);
+  opacity: 0;
+  transition: .6s;
 }
-
-.desc{
-  text-align: center;
-  padding: 4px;
+.profile-card:hover .caption{
+  opacity: 1;
+}
+.caption h3{
+  font-size: 17px;
+  font-family: sans-serif;
+}
+.caption p{
+  font-size: 15px;
+  color: #0c52a1;
+  font-family: sans-serif;
+  margin: 2px 0 9px 0;
+}
+.caption .social-links a{
+  color: #333;
+  margin-right: 15px;
+  font-size: 21px;
+  transition: .6s;
+}
+.social-links a:hover{
+  color: #0c52a1;
 }
