feat: add basic save to db onclick function

--- a/views/roundOne.ejs
+++ b/views/roundOne.ejs
@@ -90,7 +90,7 @@
             </div>
             <div class="buttons">
                 <!-- <button class="restart">Replay Quiz</button> -->
-                <button class="quit">Exit</button>
+                <button class="quit" onclick="saveTodb()" >Exit</button>
             </div>
         </div>
         <script src="js/script.js"></script>
