Connected round two

--- a/views/roundOne.ejs
+++ b/views/roundOne.ejs
@@ -41,14 +41,15 @@
                 <span>Some Rules of this Quiz</span>
             </div>
             <div class="info-list">
-                <div class="info">1. You will have only <span>20 seconds</span> per each question.</div>
-                <div class="info">2. Once you select your answer, it can't be undone.</div>
-                <div class="info">3. You can't select any option once time goes off.</div>
-                <div class="info">4. You can't exit from the Quiz while you're playing.</div>
-                <div class="info">5. You'll get points on the basis of your correct answers.</div>
+                <div class="info">1. A team will get only <span>20 seconds</span> for answering each question.</div>
+                <div class="info">2. Once you will select any option it cannot be changed again.</div>
+                <div class="info">3. A team will not be able to select any option after time is OFF.</div>
+                <div class="info">4. A team can't exit from the Quiz while you are playing.</div>
+                <div class="info">5. A team will get points according to the correct answers.</div>
+                <div class="info">6. No negative marking will be considered.</div>
             </div>
             <div class="buttons">
-                <button class="quit" style="background-color: black !important;">Exit Quiz</button>
+                <!-- <button class="quit" style="background-color: black !important;">Exit Quiz</button> -->
                 <button class="restart" style="background-color: black !important;">Continue</button>
             </div>
         </div>
@@ -69,8 +70,6 @@
             
                 </div>
             </section>
-
-        
             <footer>
                 <div class="total_que">
                 
@@ -94,9 +93,6 @@
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
